# pseudocode-cie-9618

./: .gitignore  Cargo.toml  README.md  test2.txt  thing.pseudo
.github/workflows/: rust.yml
examples/: error.rs  factorial.rs  helloworld.rs
src/: bin_ops.rs  builtins.rs  eval.rs  interpreter_io.rs  lexer.rs  lib.rs  main.rs  parser.rs  prelude.rs  utils.rs
src/js_glue/: mod.rs  worker.js
tests/: tests.rs
tests/data/: factorial.pseudo  test_array_composite.pseudo  test_array_primitive.pseudo  test_builtins.pseudo  test_byref_byval_procedure.pseudo  test_composite_primitive.pseudo  test_for_loop.pseudo  test_function_primitives.pseudo  test_if_else.pseudo  test_non_key_access_composite.pseudo  test_out_of_range_index.pseudo  test_primitive_type_check.pseudo  test_primitives.pseudo  test_procedure_composite.pseudo  test_procedure_primitive.pseudo  test_while_loop.pseudo
tests/data/primitive tests/char tests/: CharTestError.pseudo  CharTestNonError.pseudo
tests/data/primitive tests/string tests/: StringTestError.pseudo  StringTestNonError.pseudo
