[package]
name = "pseudocode-cie-9618"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.2.0"
chumsky = {git = "https://github.com/zesterer/chumsky", version = "0.8.0"}

[patch."https://github.com/zesterer/chumsky"]
chumsky = {git = "https://github.com/zesterer/chumsky", rev = "2d971c6"}